@@ -2,6 +2,8 @@ $Id$
 
 2017-11-04  Christian Franke  <franke@computer.org>
 
+	smartctl.8.in: Add '-g' to '-x' documentation.
+
 	smartctl.cpp: Improve help text formatting.
 
 2017-11-03  Christian Franke  <franke@computer.org>
